# clang-tidy-converter

./: pyproject.toml
clang_tidy_converter/parser/: clang_tidy_parser.py
